deps/v8/test/message/fail/modules-import-attributes-fail-3.out
*modules-skip-3-import-attributes-fail.json:1: SyntaxError: Unexpected token ':'
{ "life": 42 }
        ^
SyntaxError: Unexpected token ':'
